k8s/00-namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: naijcloud
  labels:
    app.kubernetes.io/name: naijcloud
    app.kubernetes.io/instance: naijcloud-production
